# FlightDataAnalyzer

./: .bumpversion.cfg  CHANGES  TODO  requirements.txt  results.xml  setup.cfg
analysis_engine/: __init__.py  api_handler.py  approaches.py  dependency_graph.py  derived_parameters.py  flight_attribute.py  flight_phase.py  json_tools.py  key_point_values.py  key_time_instances.py  library.py  multistate_parameters.py  node.py  plot_flight.py  process_flight.py  recordtype.py  settings.py  split_hdf_to_segments.py  utils.py
analysis_engine/config/: runways.yaml
analysis_engine/helicopter/: derived_parameters.py  flight_phase.py  key_point_values.py  key_time_instances.py  multistate_parameters.py
analysis_engine/pre_processing/: merge_multistate_parameters.py  merge_parameters.py
analysis_engine/simulator/: derived_parameters.py  flight_phases.py  key_point_values.py
doc/source/: DependencyTree.rst  DerivedParameter.rst  Nodes.rst  Principles.rst  ProcessFlight.rst  conf.py  index.rst
tests/: api_handler_test.py  approaches_test.py  dependency_graph_test.py  derived_parameters_test.py  flight_attribute_test.py  flight_phase_test.py  key_point_value_test.py  key_time_instance_test.py  library_test.py  multistate_parameters_test.py  node_test.py  specimen_flight_test.py  split_hdf_to_segments_test.py  utils_test.py
tests/dummy_nodes/: approaches.py  derived_parameters.py  flight_attribute.py  flight_phase.py  key_point_values.py  key_time_instances.py  multistate_parameters.py
tests/dummy_nodes/helicopter/: derived_parameters.py  flight_phase.py  key_point_values.py  (+2 more)
tests/helicopter/: derived_parameters_test.py  flight_phase_test.py  key_point_value_test.py  key_time_instances_test.py  multistate_parameters_test.py
tests/pre_processing/: merge_parameters_test.py
tests/test_data/: 681b27f77545_blend_param_one.npz  681b27f77545_blend_param_two.npz  A320_F_Altitude_Radio_(A)_dropout.npz  A320_F_Altitude_Radio_(B)_dropout.npz  A320_K_Altitude_Radio_(A)_dropout.npz  A320_K_Altitude_Radio_(B)_dropout.npz  A330_Rapid_Aileron_L_Cycle.nod  A330_Rapid_Aileron_R_Cycle.nod  ElevatorPreflightCheck_elev_l.npz  ElevatorPreflightCheck_elev_r.npz  TakeoffRWY_twd_d5c45c1c4592_Latitude.nod  TakeoffRWY_twd_d5c45c1c4592_Longitude.nod  Takeoff_AltitudeAAL_2.npz  Takeoff_HeadingContinuous_2.npz  airports.yaml  airspeed_sample_all_masked.npz  airspeed_sample_masked_under_80.npz  calculate_flap_22.npz  calculate_timebase_01.npz  dependency_graph_example_recorded_excpected.yaml  dependency_graph_example_recorded_expected.txt  dependency_graph_example_recorded_lfl_parameters.txt  dependency_graph_example_recorded_lfl_parameters.yaml  holding_high_over_florida.npz  radio_737_test_alt_std.nod  radio_737_test_ccd.nod  radio_737_test_fast.nod  radio_737_test_pitch.nod  radio_737_test_source_A.nod  radio_737_test_source_B.nod  radio_737_test_source_C.nod
(+37 files in other folders)
